[package]
name = "russh"
version = "0.1.0"
default-run = "russh"
authors = ["adrien pensart <apensart@mac>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ssh = "0.1.2"
# thrussh = "0.21.5"
thrussh = "0.19"
# thrussh-keys = "0.11.9"
thrussh-keys = "0.9"
futures = "0.1.29"
env_logger = "0.6.2"
tokio = "1.18"
tokio-core = "0.1"
tokio-io = "0.1"
structopt = "0.3"
